--- a/Tefas_Exercise_1.ipynb
+++ b/Tefas_Exercise_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0kDMnEat8m9CQxLpb2vCy",
+      "authorship_tag": "ABX9TyMNSjDJt8gw/8crxL4d6S6o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# SVM Classifier Class"
+        "# SVM Model Evaluator Class"
       ],
       "metadata": {
         "id": "KTLBVu7ToHxV"
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "xTFvBpoumk_K"
       },
@@ -52,31 +52,17 @@
         "from itertools import product\n",
         "\n",
         "\n",
-        "# Used for classification => predicting discrete labels (e.g., cat vs dog, spam vs not spam).\n",
-        "# In classification, a higher C => fewer misclassifications but risk of overfitting.\n",
-        "class SVMClassifier:\n",
+        "# Used for evaluating multiple SVM models with different hyperparameters.\n",
+        "# Evaluates all combinations of parameters in the grid and tracks the best performing model.\n",
+        "class SVMModelEvaluator:\n",
         "\n",
-        "    def __init__(self):\n",
-        "\n",
-        "        # Hyperparameter grid\n",
-        "        self.param_grid = {\n",
-        "            # \"C\": [0.1, 8, 50, 100],\n",
-        "            \"C\": [0.1, 1, 10],\n",
-        "            # \"kernel\": [\"rbf\", \"poly\", \"linear\"],\n",
-        "            # \"kernel\": [\"rbf\", \"linear\"],\n",
-        "            # \"kernel\": [\"rbf\"],\n",
-        "            \"kernel\": [\"linear\"],\n",
-        "            # \"gamma\": [\"scale\", \"auto\"],\n",
-        "            # \"gamma\": [\"auto\"],\n",
-        "            # \"decision_function_shape\": [\"ovr\", \"ovo\"],\n",
-        "            # \"decision_function_shape\": [\"ovr\"],\n",
-        "            # \"decision_function_shape\": [\"ovr\"],\n",
-        "        }\n",
+        "    def __init__(self, hyperparameter_grid):\n",
+        "        self.hyperparameter_grid = hyperparameter_grid\n",
         "        self.results = []\n",
-        "        self.__model = []\n",
+        "        self.__best_model = []\n",
         "\n",
-        "    def get_model(self):\n",
-        "        return self.__model\n",
+        "    def get_best_model(self):\n",
+        "        return self.__best_model\n",
         "\n",
         "    @staticmethod\n",
         "    def count_correct_incorrect(y_true, y_pred):\n",
@@ -97,8 +83,8 @@
         "    def evaluate_all_models(self, x_train, x_test, y_train, y_test):\n",
         "\n",
         "        # Create all parameter combinations\n",
-        "        keys = list(self.param_grid.keys())\n",
-        "        combinations = list(product(*self.param_grid.values()))\n",
+        "        keys = list(self.hyperparameter_grid.keys())\n",
+        "        combinations = list(product(*self.hyperparameter_grid.values()))\n",
         "\n",
         "        print(f\"Evaluating {len(combinations)} models...\\n\")\n",
         "\n",
@@ -160,7 +146,7 @@
         "                best_test_accuracy = test_accuracy\n",
         "\n",
         "                # Store the best model along with extra info\n",
-        "                self.__model = {\n",
+        "                self.__best_model = {\n",
         "                    \"model\": model,\n",
         "                    \"train_accuracy\": train_accuracy,\n",
         "                    \"test_accuracy\": test_accuracy,\n",
@@ -174,16 +160,20 @@
         "                    \"y_test_pred\": y_test_pred\n",
         "                }\n",
         "\n",
-        "        # Store data to file\n",
+        "\n",
+        "\n",
         "        # Convert to DataFrame\n",
         "        df = pd.DataFrame(self.results)\n",
+        "\n",
         "        # Build timestamped filename\n",
         "        timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
         "        filename = f\"svm_full_results_{timestamp}.csv\"\n",
+        "\n",
+        "        # Store data to file\n",
         "        df.to_csv(filename, index=False)\n",
         "        print(f\"Saved all model results to {filename}\\n\")\n",
         "\n",
-        "        return df"
+        "        return df\n"
       ]
     },
     {
@@ -198,14 +188,24 @@
     {
       "cell_type": "code",
       "source": [
+        "from matplotlib import pyplot as plt\n",
         "from tensorflow.keras.datasets import cifar10\n",
         "import numpy as np\n",
         "from sklearn.decomposition import PCA\n",
-        "import matplotlib.pyplot as plt\n",
         "from scipy.io import loadmat\n",
         "\n",
         "\n",
         "class DataHelper:\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def load_desired_data(desired_data):\n",
+        "\n",
+        "        if desired_data == \"cifar10\":\n",
+        "            return DataHelper.load_cifar10_data()\n",
+        "        elif desired_data == \"svhn\":\n",
+        "            return DataHelper.load_svhn_data()\n",
+        "        else:\n",
+        "            raise Exception(\"[ERROR] Wrong desired data was given!\")\n",
         "\n",
         "    @staticmethod\n",
         "    def load_cifar10_data():\n",
@@ -242,7 +242,6 @@
         "        # Load all sets\n",
         "        x_train, y_train = DataHelper.custom_load_mat(\"./svhn_data/train_32x32.mat\")\n",
         "        x_test, y_test = DataHelper.custom_load_mat(\"./svhn_data/test_32x32.mat\")\n",
-        "        # x_extra, y_extra = DataHelper.custom_load_mat(\"./svhn_data/extra_32x32.mat\")\n",
         "\n",
         "        # Normalize to [0, 1]\n",
         "        x_train = x_train.astype(\"float32\") / 255.0\n",
@@ -357,12 +356,13 @@
         "            incorrect_idx, incorrect_size,\n",
         "            original_x_test, desired_y_test, class_y_test_pred,\n",
         "            f\"{incorrect_size} Incorrect Classifications\"\n",
-        "        )\n"
+        "        )\n",
+        "\n"
       ],
       "metadata": {
         "id": "R-CmgnAJoEUn"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -379,32 +379,38 @@
       "source": [
         "from datetime import datetime\n",
         "\n",
+        "# Set program basic information\n",
+        "program_basic_info: dict = {\n",
+        "    \"desired_data\": \"svhn\",\n",
+        "    \"hyperparameter_grid\": {\n",
+        "            \"C\": [0.1, 1, 10],  # \"C\": [0.1, 8, 50, 100],\n",
+        "            \"kernel\": [\"rbf\"],  # \"kernel\": [\"rbf\", \"linear\"],\n",
+        "            \"gamma\": [\"auto\"],  # \"gamma\": [\"scale\", \"auto\"],\n",
+        "            \"decision_function_shape\": [\"ovo\"], # \"decision_function_shape\": [\"ovr\", \"ovo\"],\n",
+        "    },\n",
+        "    \"minimize_samples\": True\n",
+        "}\n",
+        "\n",
         "\n",
         "def main():\n",
         "\n",
-        "    minimize_samples = True\n",
+        "    # Load desired data\n",
+        "    # desired_data possible values -> \"cifar10\", \"svhn\"\n",
+        "    (x_train, y_train), (x_test, y_test) = DataHelper.load_desired_data(desired_data=program_basic_info[\"desired_data\"])\n",
+        "    desired_x_train, desired_x_test, desired_y_train, desired_y_test = x_train, x_test, y_train, y_test\n",
         "\n",
-        "    # Load data from CIFAR10\n",
-        "    (x_train, y_train), (x_test, y_test) = DataHelper.load_cifar10_data()\n",
-        "    # (x_train, y_train), (x_test, y_test) = DataHelper.load_svhn_data()\n",
+        "    # -------------------------------\n",
+        "    # -------- PREPROCESSING --------\n",
+        "    # -------------------------------\n",
         "\n",
-        "    if minimize_samples:\n",
+        "    if program_basic_info[\"minimize_samples\"]:\n",
         "\n",
         "        # Minimize samples\n",
-        "        min_x_train, min_x_test, min_y_train, min_y_test = DataHelper.minimize_samples(\n",
+        "        desired_x_train, desired_x_test, desired_y_train, desired_y_test = DataHelper.minimize_samples(\n",
         "            x_train, x_test, y_train, y_test,\n",
-        "            max_train_samples=5000,\n",
-        "            max_test_samples=835\n",
+        "            max_train_samples=2000,\n",
+        "            max_test_samples=900\n",
         "        )\n",
-        "\n",
-        "        desired_x_train, desired_x_test, desired_y_train, desired_y_test = min_x_train, min_x_test, min_y_train, min_y_test\n",
-        "\n",
-        "    else:\n",
-        "\n",
-        "        desired_x_train, desired_x_test, desired_y_train, desired_y_test = x_train, x_test, y_train, y_test\n",
-        "\n",
-        "    # # Save original minimized x test samples\n",
-        "    # original_x_test = desired_x_test.copy()\n",
         "\n",
         "    # Flatten and PCA\n",
         "    desired_x_train, desired_x_test = DataHelper.flatten_and_pca_samples(given_x_train=desired_x_train, given_x_test=desired_x_test)\n",
@@ -412,26 +418,39 @@
         "    # Remove extra label dimension  (shape becomes (N,) instead of (N,1))\n",
         "    desired_y_train, desired_y_test = DataHelper.ravel_samples(given_y_train=desired_y_train, given_y_test=desired_y_test)\n",
         "\n",
-        "    # Create svm classifier\n",
-        "    svm_classifier = SVMClassifier()\n",
-        "    df = svm_classifier.evaluate_all_models(\n",
+        "    # Save original minimized x test samples\n",
+        "    original_x_test = desired_x_test.copy()\n",
+        "\n",
+        "    # -------------------------------\n",
+        "    # ------ MODELS EVALUATION ------\n",
+        "    # -------------------------------\n",
+        "\n",
+        "    # Create SVM model evaluator\n",
+        "    svm_model_evaluator = SVMModelEvaluator(hyperparameter_grid=program_basic_info[\"hyperparameter_grid\"])\n",
+        "\n",
+        "    # Evaluate all models (All the possible combinations with the given parameters)\n",
+        "    df = svm_model_evaluator.evaluate_all_models(\n",
         "        desired_x_train, desired_x_test,\n",
         "        desired_y_train, desired_y_test\n",
         "    )\n",
         "\n",
+        "    # -------------------------------\n",
+        "    # ----------- RESULTS -----------\n",
+        "    # -------------------------------\n",
+        "\n",
         "    # Print data frame\n",
-        "    print(\"All model results:\\n\\n\")\n",
-        "    print(df)\n",
+        "    print(f\"All model results:\\n\\n{df}\\n\\n\")\n",
         "\n",
         "    # Get desired model information\n",
-        "    best_model_info = svm_classifier.get_model()\n",
+        "    best_model_info = svm_model_evaluator.get_best_model()\n",
         "\n",
         "    # Print best model information\n",
-        "    print(f\"\\n\\nBest model:\\n\\n{best_model_info}\\n\")\n",
+        "    print(f\"Best model:\\n\\n{best_model_info}\\n\")\n",
         "\n",
-        "    # # Random visualization\n",
-        "    # DataHelper.random_visualization(3, 3, best_model_info, desired_y_test, original_x_test)\n",
+        "    # Random visualization\n",
+        "    DataHelper.random_visualization(3, 3, best_model_info, desired_y_test, original_x_test)\n",
         "\n",
+        "# Program execution\n",
         "if __name__ == '__main__':\n",
         "\n",
         "    # Start datetime\n",
