--- a/Exercise_seven_(7).ipynb
+++ b/Exercise_seven_(7).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuGkguQ41aVnTmBRjlofSm",
+      "authorship_tag": "ABX9TyM6SLd7KO8TPCtU4gZXP2Sg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "jJsSjEWbFWxg"
       },
-      "execution_count": 14,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 917
         },
-        "outputId": "27b89c6c-52c5-4069-cec2-85bdc9ffba59"
+        "outputId": "1d41493e-2308-48ff-f9d4-fa906b3eaecc"
       },
       "execution_count": 2,
       "outputs": [
@@ -184,7 +184,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "10c2f21c-e5ac-4183-fe20-af7126edf0c0"
+        "outputId": "3b7c6917-1e22-4983-d090-58a226d69ad4"
       },
       "execution_count": 3,
       "outputs": [
@@ -251,7 +251,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "69ed0ce6-91ad-44b6-887b-951acb007c8d"
+        "outputId": "4f1a6cf5-ba28-4466-e8c9-afb4fa6594bf"
       },
       "execution_count": 4,
       "outputs": [
@@ -304,7 +304,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6ce9693f-d624-4602-da00-9f0ef421136d"
+        "outputId": "96c7a153-38a1-4666-d858-fe7723966f6a"
       },
       "execution_count": 6,
       "outputs": [
@@ -407,7 +407,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f478560c-b3c0-47c6-a96c-5b6669f86615"
+        "outputId": "2ee5fc63-14c6-451f-d65d-189d6fb21658"
       },
       "execution_count": 7,
       "outputs": [
@@ -465,7 +465,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fbb7b3c0-22d6-407e-a4a9-d9938d926de9"
+        "outputId": "91ad91af-bd1a-459e-8e2a-42a76fcc4807"
       },
       "execution_count": 8,
       "outputs": [
@@ -513,6 +513,13 @@
         "\n",
         "  return metrics_train, metrics_test\n",
         "\n",
+        "def print_metrics(given_metrics):\n",
+        "  print(f\"Accuracy: {given_metrics['accuracy']:.4f}\")\n",
+        "  print(f\"F1-score: {given_metrics['f1_score']:.4f}\")\n",
+        "  print(f\"Precision: {given_metrics['precision']:.4f}\")\n",
+        "  print(f\"Recall: {given_metrics['recall']:.4f}\\n\\n\")\n",
+        "\n",
+        "\n",
         "# Create LinearSVC\n",
         "clf = LinearSVC(random_state=0)\n",
         "\n",
@@ -521,23 +528,17 @@
         "\n",
         "# Print results\n",
         "print(\"----- Train Metris / Linear Without PCA -----\\n\")\n",
-        "print(f\"Accuracy: {linear_no_pca_train_metr['accuracy']:.4f}\")\n",
-        "print(f\"F1-score: {linear_no_pca_train_metr['f1_score']:.4f}\")\n",
-        "print(f\"Precision: {linear_no_pca_train_metr['precision']:.4f}\")\n",
-        "print(f\"Recall: {linear_no_pca_train_metr['recall']:.4f}\\n\\n\")\n",
+        "print_metrics(linear_no_pca_train_metr)\n",
         "\n",
         "print(\"----- Test Metris / Linear Without PCA -----\\n\")\n",
-        "print(f\"Accuracy: {linear_no_pca_test_metr['accuracy']:.4f}\")\n",
-        "print(f\"F1-score: {linear_no_pca_test_metr['f1_score']:.4f}\")\n",
-        "print(f\"Precision: {linear_no_pca_test_metr['precision']:.4f}\")\n",
-        "print(f\"Recall: {linear_no_pca_test_metr['recall']:.4f}\\n\\n\")"
+        "print_metrics(linear_no_pca_test_metr)"
       ],
       "metadata": {
         "id": "mhkS9CiQUphf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "168262b8-a402-4c61-bd1e-eddf14f8bd35"
+        "outputId": "99d93ec1-04d9-40bf-918c-70cb94c594f2"
       },
       "execution_count": 9,
       "outputs": [
@@ -603,16 +604,10 @@
         "\n",
         "# Print results\n",
         "print(\"----- Train Metris / Linear With PCA -----\\n\")\n",
-        "print(f\"Accuracy: {linear_pca_train_metr['accuracy']:.4f}\")\n",
-        "print(f\"F1-score: {linear_pca_train_metr['f1_score']:.4f}\")\n",
-        "print(f\"Precision: {linear_pca_train_metr['precision']:.4f}\")\n",
-        "print(f\"Recall: {linear_pca_train_metr['recall']:.4f}\\n\\n\")\n",
+        "print_metrics(linear_pca_train_metr)\n",
         "\n",
         "print(\"----- Test Metris / Linear With PCA -----\\n\")\n",
-        "print(f\"Accuracy: {linear_pca_test_metr['accuracy']:.4f}\")\n",
-        "print(f\"F1-score: {linear_pca_test_metr['f1_score']:.4f}\")\n",
-        "print(f\"Precision: {linear_pca_test_metr['precision']:.4f}\")\n",
-        "print(f\"Recall: {linear_pca_test_metr['recall']:.4f}\\n\\n\")\n",
+        "print_metrics(linear_pca_test_metr)\n",
         "\n",
         "# RBF SVC\n",
         "rbf_clf = SVC(kernel='rbf', random_state=42)\n",
@@ -622,23 +617,17 @@
         "\n",
         "# Print results\n",
         "print(\"----- Train Metris / RBF Scale With PCA -----\\n\")\n",
-        "print(f\"Accuracy: {rbf_scale_pca_train_metr['accuracy']:.4f}\")\n",
-        "print(f\"F1-score: {rbf_scale_pca_train_metr['f1_score']:.4f}\")\n",
-        "print(f\"Precision: {rbf_scale_pca_train_metr['precision']:.4f}\")\n",
-        "print(f\"Recall: {rbf_scale_pca_train_metr['recall']:.4f}\\n\\n\")\n",
+        "print_metrics(rbf_scale_pca_train_metr)\n",
         "\n",
         "print(\"----- Test Metris / RBF Scale With PCA -----\\n\")\n",
-        "print(f\"Accuracy: {rbf_scale_pca_test_metr['accuracy']:.4f}\")\n",
-        "print(f\"F1-score: {rbf_scale_pca_test_metr['f1_score']:.4f}\")\n",
-        "print(f\"Precision: {rbf_scale_pca_test_metr['precision']:.4f}\")\n",
-        "print(f\"Recall: {rbf_scale_pca_test_metr['recall']:.4f}\\n\\n\")"
+        "print_metrics(rbf_scale_pca_test_metr)"
       ],
       "metadata": {
         "id": "ZAL038zDWRbq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18f66743-59e3-4c55-83f6-412fb7481f9e"
+        "outputId": "5da0d28a-d4b2-4b12-9c4d-d97a51b2013e"
       },
       "execution_count": 10,
       "outputs": [
@@ -715,23 +704,17 @@
         "\n",
         "# Print results\n",
         "print(\"----- Train Metris / RBF Auto With PCA -----\\n\")\n",
-        "print(f\"Accuracy: {rbf_auto_pca_train_metr['accuracy']:.4f}\")\n",
-        "print(f\"F1-score: {rbf_auto_pca_train_metr['f1_score']:.4f}\")\n",
-        "print(f\"Precision: {rbf_auto_pca_train_metr['precision']:.4f}\")\n",
-        "print(f\"Recall: {rbf_auto_pca_train_metr['recall']:.4f}\\n\\n\")\n",
+        "print_metrics(rbf_auto_pca_train_metr)\n",
         "\n",
         "print(\"----- Test Metris / RBF Auto With PCA -----\\n\")\n",
-        "print(f\"Accuracy: {rbf_auto_pca_test_metr['accuracy']:.4f}\")\n",
-        "print(f\"F1-score: {rbf_auto_pca_test_metr['f1_score']:.4f}\")\n",
-        "print(f\"Precision: {rbf_auto_pca_test_metr['precision']:.4f}\")\n",
-        "print(f\"Recall: {rbf_auto_pca_test_metr['recall']:.4f}\\n\\n\")\n"
+        "print_metrics(rbf_auto_pca_test_metr)\n"
       ],
       "metadata": {
         "id": "Zb-JVPX6lF5g",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cdf75176-5d1b-4c53-9dfa-f9c83e412202"
+        "outputId": "11a79057-4762-4c7c-ad2b-ed3e6509bd86"
       },
       "execution_count": 11,
       "outputs": [
@@ -788,7 +771,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "403aeb93-f42c-4a5e-8453-80bd4e0c463a"
+        "outputId": "d7bc0d91-a0ba-4541-df63-19c7ef26989e"
       },
       "execution_count": 12,
       "outputs": [
@@ -833,7 +816,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 619
         },
-        "outputId": "0e453556-1195-4311-9f62-fc3c02263dbf"
+        "outputId": "28b39f82-7698-4b00-a06e-60e36239028b"
       },
       "execution_count": 13,
       "outputs": [
@@ -882,25 +865,19 @@
         "\n",
         "# Print results\n",
         "print(\"----- Train Metris / GaussianNB -----\\n\")\n",
-        "print(f\"Accuracy: {gnb_train_metr['accuracy']:.4f}\")\n",
-        "print(f\"F1-score: {gnb_train_metr['f1_score']:.4f}\")\n",
-        "print(f\"Precision: {gnb_train_metr['precision']:.4f}\")\n",
-        "print(f\"Recall: {gnb_train_metr['recall']:.4f}\\n\\n\")\n",
+        "print_metrics(gnb_train_metr)\n",
         "\n",
         "print(\"----- Test Metris / GaussianNB -----\\n\")\n",
-        "print(f\"Accuracy: {gnb_test_metr['accuracy']:.4f}\")\n",
-        "print(f\"F1-score: {gnb_test_metr['f1_score']:.4f}\")\n",
-        "print(f\"Precision: {gnb_test_metr['precision']:.4f}\")\n",
-        "print(f\"Recall: {gnb_test_metr['recall']:.4f}\\n\\n\")"
+        "print_metrics(gnb_test_metr)"
       ],
       "metadata": {
         "id": "oQTIl-mVlHO8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "44c51795-f582-4332-d809-aff7ac03aad5"
+        "outputId": "3fe6a8e7-0e5e-42a9-ed62-e9481bc2229d"
       },
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
